<resources>
    <string name="app_name">DOC</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Contact No</string>
    <string name="designation">Designation</string>
    <string name="history">Medical History</string>
    <string name="signUp"><u>Sign up</u></string>
    <string-array name="typeAdapter">
        <item>Client</item>
        <item>Doctor</item>
        <item>Transit Service</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="login_title">Contacting server</string>
    <string name="login_content">Logging in</string>
    <string name="signup_content">Signing up</string>
    <string name="title_activity_maps">Map</string>
    <string name="tabInfo">Info</string>
    <string name="tabHistory">History</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="refresh">refresh</string>
    <string name="logout">Logout</string>
    <string name="editDialogTitle">Edit Info</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="resolve">Resolve</string>
    <string name="save">save</string>
    <string name="confirmLogout">Are you sure you want to logout?</string>
    <string name="updatingInfo">Updating personal information</string>
    <string name="note">Note</string>
    <string name="noteTitle">New SOS Request</string>
    <string name="sosContent">Broadcasting SOS</string>
    <string name="transitRequestTitle">New Transit Request</string>
    <string name="transitRequestContent">Do you want a transitHistory service to be arranged to the location?</string>
    <string name="detailTitle">Details</string>
    <string name="arrange">Arrange Transit</string>
</resources>
